--- a/index.html
+++ b/index.html
@@ -6,178 +6,115 @@
   <title>Barbearia Davi Dias</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: #111;
-      color: #fff;
+    body { font-family: 'Roboto', sans-serif; margin: 0; background: #111; color: #fff; }
+    header { background: #000; padding: 1.5rem; text-align: center; position: relative; }
+    h1 { font-family: 'Anton', sans-serif; font-size: 2.8rem; color: #e6b800; }
+    main { padding: 2rem; max-width: 900px; margin: auto; }
+    .feedback-item, .gallery-img {
+      background: #1c1c1c; margin: 1rem 0; padding: 1rem; border-radius: 8px;
     }
-    header {
-      background-color: #000;
-      padding: 2rem;
-      text-align: center;
-    }
-    h1 {
-      font-family: 'Anton', sans-serif;
-      font-size: 3rem;
-      color: #e6b800;
-    }
-    main {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
-    }
-    .feedback-form input, .feedback-form textarea, .feedback-form select {
-      width: 100%;
-      margin-bottom: 1rem;
-      padding: 0.75rem;
-      border-radius: 8px;
+    .stars { color: gold; }
+    .gallery { display: flex; flex-wrap: wrap; gap: 10px; }
+    .gallery img { width: 150px; border-radius: 8px; }
+
+    .barbeiros { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 2rem; }
+    .barbeiro { background: #1a1a1a; padding: 1rem; border-radius: 8px; flex: 1; min-width: 200px; text-align: center; }
+    .barbeiro img { width: 100px; border-radius: 50%; margin-bottom: 0.5rem; }
+    .barbeiro h3 { margin: 0.5rem 0 0.2rem 0; color: gold; }
+
+    .btn-agendar {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background: #e6b800;
+      padding: 0.5rem 1rem;
       border: none;
-    }
-    .feedback-form button {
-      background-color: #e6b800;
-      padding: 0.75rem;
-      border: none;
+      border-radius: 6px;
+      color: black;
       font-weight: bold;
-      cursor: pointer;
-      border-radius: 8px;
-    }
-    .feedback-list {
-      margin-top: 2rem;
-    }
-    .feedback-item {
-      background-color: #1a1a1a;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
-    .stars {
-      color: gold;
-    }
-    #admin-section {
-      display: none;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Barbearia Davi Dias</h1>
+    <a class="btn-agendar" href="https://www.instagram.com/barbeiro.davi_dias" target="_blank">📅 Agendar Corte</a>
   </header>
   <main>
-    <section class="feedback-form">
-      <h2>Deixe seu Feedback ⭐</h2>
-      <input type="text" id="nome" placeholder="Seu nome"/>
-      <textarea id="comentario" placeholder="Comentário..."></textarea>
-      <select id="nota">
-        <option value="5">⭐⭐⭐⭐⭐</option>
-        <option value="4">⭐⭐⭐⭐</option>
-        <option value="3">⭐⭐⭐</option>
-        <option value="2">⭐⭐</option>
-        <option value="1">⭐</option>
-      </select>
-      <button onclick="enviarFeedback()">Enviar</button>
+    <section>
+      <h2>Feedbacks Recentes</h2>
+      <div id="feedbacks"></div>
     </section>
 
-    <section class="feedback-list" id="lista-feedbacks">
-      <h2>Feedbacks Recebidos 🗣️</h2>
+    <section>
+      <h2>Galeria</h2>
+      <div id="galeria" class="gallery"></div>
     </section>
 
-    <section id="admin-section">
-      <h2>Painel do Admin</h2>
-      <input type="file" id="imgUpload" />
-      <button onclick="uploadImagem()">Adicionar Foto à Galeria</button>
-      <div id="galeria"></div>
+    <section>
+      <h2>Nossa Equipe</h2>
+      <div class="barbeiros">
+        <div class="barbeiro">
+          <img src="https://i.imgur.com/sHcGSLJ.png" alt="Davi Dias">
+          <h3>Davi Dias</h3>
+          <p>Especialista em cortes modernos e barba na navalha.</p>
+        </div>
+        <div class="barbeiro">
+          <img src="https://i.imgur.com/4ZPRAZL.png" alt="Lucas Silva">
+          <h3>Lucas Silva</h3>
+          <p>Corte na tesoura, social e atendimento kids.</p>
+        </div>
+        <div class="barbeiro">
+          <img src="https://i.imgur.com/76Ardh2.png" alt="André Costa">
+          <h3>André Costa</h3>
+          <p>Desenhos na máquina, freestyle e degradê avançado.</p>
+        </div>
+      </div>
     </section>
   </main>
 
-  <!-- Firebase SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getStorage, ref as sRef, uploadBytes, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+    import { getStorage, ref as sRef, listAll, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDx2IBIdo7_b0P9tMWhkxAvM0ehBa9cYas",
       authDomain: "testgithub-d13a2.firebaseapp.com",
+      databaseURL: "https://testgithub-d13a2-default-rtdb.firebaseio.com",
       projectId: "testgithub-d13a2",
       storageBucket: "testgithub-d13a2.appspot.com",
       messagingSenderId: "847448063225",
-      appId: "1:847448063225:web:1f51f702060de265f6898e",
-      databaseURL: "https://testgithub-d13a2-default-rtdb.firebaseio.com"
+      appId: "1:847448063225:web:1f51f702060de265f6898e"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const auth = getAuth();
     const storage = getStorage();
 
-    const enviarFeedback = () => {
-      const nome = document.getElementById('nome').value;
-      const comentario = document.getElementById('comentario').value;
-      const nota = document.getElementById('nota').value;
-
-      if (nome && comentario) {
-        push(ref(db, 'feedbacks'), {
-          nome, comentario, nota
-        });
-        alert("Feedback enviado!");
-        document.getElementById('nome').value = "";
-        document.getElementById('comentario').value = "";
-      }
-    };
-
-    const listarFeedbacks = () => {
-      const lista = document.getElementById('lista-feedbacks');
-      onValue(ref(db, 'feedbacks'), (snapshot) => {
-        lista.innerHTML = "<h2>Feedbacks Recebidos 🗣️</h2>";
-        snapshot.forEach(child => {
-          const fb = child.val();
-          lista.innerHTML += `
-            <div class="feedback-item">
-              <strong>${fb.nome}</strong> - <span class="stars">${'⭐'.repeat(fb.nota)}</span><br/>
-              ${fb.comentario}
-            </div>
-          `;
-        });
+    const feedbackContainer = document.getElementById("feedbacks");
+    onValue(ref(db, "feedbacks"), (snapshot) => {
+      feedbackContainer.innerHTML = "";
+      snapshot.forEach(child => {
+        const fb = child.val();
+        feedbackContainer.innerHTML += `
+          <div class="feedback-item">
+            <strong>${fb.nome}</strong> - <span class="stars">${'⭐'.repeat(fb.nota)}</span><br/>
+            ${fb.comentario}
+          </div>
+        `;
       });
-    };
-
-    const uploadImagem = () => {
-      const file = document.getElementById('imgUpload').files[0];
-      if (file) {
-        const storageRef = sRef(storage, 'galeria/' + file.name);
-        uploadBytes(storageRef, file).then(() => {
-          alert("Foto enviada!");
-          carregarGaleria();
-        });
-      }
-    };
-
-    const carregarGaleria = () => {
-      const container = document.getElementById('galeria');
-      container.innerHTML = "<h3>Galeria Atual</h3>";
-      const galeriaRef = sRef(storage, 'galeria/');
-      listAll(galeriaRef).then(res => {
-        res.items.forEach(itemRef => {
-          getDownloadURL(itemRef).then(url => {
-            container.innerHTML += `<img src="${url}" style="width:150px;margin:10px;border-radius:10px"/>`;
-          });
-        });
-      });
-    };
-
-    onAuthStateChanged(auth, user => {
-      if (user) {
-        document.getElementById('admin-section').style.display = 'block';
-        carregarGaleria();
-      }
     });
 
-    signInWithEmailAndPassword(auth, "admin@barbearia.com", "123456")
-      .catch(() => console.warn("Login falhou"));
-
-    listarFeedbacks();
+    const galeriaDiv = document.getElementById("galeria");
+    listAll(sRef(storage, "galeria/")).then(res => {
+      res.items.forEach(item => {
+        getDownloadURL(item).then(url => {
+          galeriaDiv.innerHTML += `<img src="${url}" />`;
+        });
+      });
+    });
   </script>
 </body>
 </html>
