--- a/index.html
+++ b/index.html
@@ -2,119 +2,37 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Barbearia Davi Dias</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Barbearia Davi Dias - Início</title>
   <style>
-    body { font-family: 'Roboto', sans-serif; margin: 0; background: #111; color: #fff; }
-    header { background: #000; padding: 1.5rem; text-align: center; position: relative; }
-    h1 { font-family: 'Anton', sans-serif; font-size: 2.8rem; color: #e6b800; }
-    main { padding: 2rem; max-width: 900px; margin: auto; }
-    .feedback-item, .gallery-img {
-      background: #1c1c1c; margin: 1rem 0; padding: 1rem; border-radius: 8px;
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 2rem;
     }
-    .stars { color: gold; }
-    .gallery { display: flex; flex-wrap: wrap; gap: 10px; }
-    .gallery img { width: 150px; border-radius: 8px; }
-
-    .barbeiros { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 2rem; }
-    .barbeiro { background: #1a1a1a; padding: 1rem; border-radius: 8px; flex: 1; min-width: 200px; text-align: center; }
-    .barbeiro img { width: 100px; border-radius: 50%; margin-bottom: 0.5rem; }
-    .barbeiro h3 { margin: 0.5rem 0 0.2rem 0; color: gold; }
-
-    .btn-agendar {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
+    a {
       background: #e6b800;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 6px;
       color: black;
-      font-weight: bold;
       text-decoration: none;
+      padding: 1rem 2rem;
+      border-radius: 6px;
+      font-weight: bold;
+      margin: 1rem;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+    }
+    a:hover {
+      background: #c1a500;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Barbearia Davi Dias</h1>
-    <a class="btn-agendar" href="https://www.instagram.com/barbeiro.davi_dias" target="_blank">📅 Agendar Corte</a>
-  </header>
-  <main>
-    <section>
-      <h2>Feedbacks Recentes</h2>
-      <div id="feedbacks"></div>
-    </section>
+  <h1>Bem-vindo à Barbearia Davi Dias</h1>
+  <p>Para acessar a área administrativa, faça login ou cadastre-se.</p>
 
-    <section>
-      <h2>Galeria</h2>
-      <div id="galeria" class="gallery"></div>
-    </section>
-
-    <section>
-      <h2>Nossa Equipe</h2>
-      <div class="barbeiros">
-        <div class="barbeiro">
-          <img src="https://i.imgur.com/sHcGSLJ.png" alt="Davi Dias">
-          <h3>Davi Dias</h3>
-          <p>Especialista em cortes modernos e barba na navalha.</p>
-        </div>
-        <div class="barbeiro">
-          <img src="https://i.imgur.com/4ZPRAZL.png" alt="Lucas Silva">
-          <h3>Lucas Silva</h3>
-          <p>Corte na tesoura, social e atendimento kids.</p>
-        </div>
-        <div class="barbeiro">
-          <img src="https://i.imgur.com/76Ardh2.png" alt="André Costa">
-          <h3>André Costa</h3>
-          <p>Desenhos na máquina, freestyle e degradê avançado.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-    import { getStorage, ref as sRef, listAll, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDx2IBIdo7_b0P9tMWhkxAvM0ehBa9cYas",
-      authDomain: "testgithub-d13a2.firebaseapp.com",
-      databaseURL: "https://testgithub-d13a2-default-rtdb.firebaseio.com",
-      projectId: "testgithub-d13a2",
-      storageBucket: "testgithub-d13a2.appspot.com",
-      messagingSenderId: "847448063225",
-      appId: "1:847448063225:web:1f51f702060de265f6898e"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const storage = getStorage();
-
-    const feedbackContainer = document.getElementById("feedbacks");
-    onValue(ref(db, "feedbacks"), (snapshot) => {
-      feedbackContainer.innerHTML = "";
-      snapshot.forEach(child => {
-        const fb = child.val();
-        feedbackContainer.innerHTML += `
-          <div class="feedback-item">
-            <strong>${fb.nome}</strong> - <span class="stars">${'⭐'.repeat(fb.nota)}</span><br/>
-            ${fb.comentario}
-          </div>
-        `;
-      });
-    });
-
-    const galeriaDiv = document.getElementById("galeria");
-    listAll(sRef(storage, "galeria/")).then(res => {
-      res.items.forEach(item => {
-        getDownloadURL(item).then(url => {
-          galeriaDiv.innerHTML += `<img src="${url}" />`;
-        });
-      });
-    });
-  </script>
+  <a href="login.html">Login</a>
+  <a href="cadastro.html">Cadastrar</a>
 </body>
 </html>
