--- a/login.html
+++ b/login.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login - Barbearia Davi Dias</title>
+  <title>Login</title>
 </head>
 <body>
   <h1>Login</h1>
@@ -12,11 +13,9 @@
     <input id="senha" type="password" placeholder="Sua senha" required><br>
     <button type="submit">Entrar</button>
   </form>
-
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-
     const firebaseConfig = {
       apiKey: "AIzaSyDaZHDJh8Jw4U1-QT2TYWAOxk3Xy57Sekk",
       authDomain: "testgithub-d13a2.firebaseapp.com",
@@ -26,24 +25,15 @@
       messagingSenderId: "847448063225",
       appId: "1:847448063225:web:1f51f702060de265f6898e"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-
-    const loginForm = document.getElementById("login");
-    loginForm.addEventListener("submit", (e) => {
+    document.getElementById("login").addEventListener("submit", (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
       const senha = document.getElementById("senha").value;
-
       signInWithEmailAndPassword(auth, email, senha)
-        .then(() => {
-          alert("Login realizado!");
-          location.href = "admin.html"; // ou index.html se preferir
-        })
-        .catch((error) => {
-          alert("Erro: " + error.message);
-        });
+        .then(() => { alert("Login realizado!"); location.href = "admin.html"; })
+        .catch(error => alert("Erro: " + error.message));
     });
   </script>
 </body>
